feat: initial version which actually works

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: node_js
 node_js: '12.11.1'
 branches:
   only:
-  - master
+    - master
 notifications:
   slack:
     rooms:
@@ -10,40 +10,31 @@ notifications:
     on_failure: always
     on_success: change
 stages:
-- name: test
-- name: analysis
-- name: build
-- name: release
-  if: branch = master AND type != pull_request
+  - name: check
+  - name: build
+  - name: e2e
+  - name: release
+    if: branch = master AND type != pull_request
 jobs:
   include:
-  - stage: test
-    script: npm test -- --maxWorkers=4
-    name: test
-  - script: npm run lint
-    name: lint
-  - stage: analysis
-    script: npm test -- --coverage --maxWorkers=4 && npm run lint -- -f json -o reports/eslint.json && npx gulp sonar
-    name: sonar
-    addons:
-      sonarcloud:
-        organization: flowscripter
-        token:
-          secure: "$SONAR_TOKEN"
-  - stage: build
-    script: npm run build && npm run docs
-    name: build
-  - stage: release
-    script: npm run build && npm run docs && touch docs/.nojekyll
-    deploy:
-      - provider: script
-        skip_cleanup: true
-        script: npx semantic-release
-      - provider: pages
-        skip-cleanup: true
-        local-dir: "docs"
-        github-token: $GH_TOKEN
+    - stage: check
+      script: npm run lint
+      name: lint
+    - stage: build
+      script: npm run build
+      name: build
+    - stage: e2e
+      script: npm run build && npm run e2e -- --maxWorkers=4
+      name: e2e
+    - stage: release
+      script: npm run build && npm run e2e -- --maxWorkers=4 && touch dist/.nojekyll
+      deploy:
+        - provider: script
+          skip_cleanup: true
+          script: npx semantic-release
+        - provider: pages
+          skip-cleanup: true
+          local-dir: "dist"
+          github-token: $GH_TOKEN
 cache:
   npm: true
-  directories:
-    - /home/travis/.sonar
