--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
-    "name": "@flowscripter/ts-template",
+    "name": "@flowscripter/js-example-cli",
     "version": "0.0.0",
-    "description": "Template TypeScript project.",
+    "description": "Example JavaScript CLI application for the cli-framework.",
     "repository": {
         "type": "git",
-        "url": "https://github.com/flowscripter/ts-template"
+        "url": "https://github.com/flowscripter/js-example-cli"
     },
-    "homepage": "https://github.com/flowscripter/ts-template",
+    "homepage": "https://github.com/flowscripter/js-example-cli",
     "bugs": {
-        "url": "https://github.com/flowscripter/ts-template/issues"
+        "url": "https://github.com/flowscripter/js-example-cli/issues"
     },
     "keywords": [
-        "typescript"
+        "javascript"
     ],
     "contributors": [
         {
@@ -24,59 +24,47 @@
     "publishConfig": {
         "access": "public"
     },
-    "main": "dist/node.js",
-    "browser": "dist/browser.js",
     "type": "module",
     "files": [
         "dist/**/*"
     ],
-    "types": "dist/types/index.d.ts",
     "engines": {
-        "node": "12.14.1"
+        "node": "12.11.1"
+    },
+    "bin": {
+        "js-example-cli": "./bin/js-example-cli"
     },
     "scripts": {
         "prebuild": "npx rimraf dist",
         "build": "npx rollup -c",
         "watch": "npx rollup -c --watch",
-        "test": "npx jest",
-        "lint": "npx eslint ./src/**/*.ts ./test/**/*.ts",
-        "docs": "npx typedoc --moduleResolution node src"
+        "lint": "npx eslint ./src/**/*.js",
+        "e2e": "npx jest --config=jest.e2e.config.js"
     },
     "devDependencies": {
-        "@commitlint/cli": "8.3.4",
-        "@commitlint/config-conventional": "8.3.4",
-        "@flowscripter/eslint-config": "1.3.22",
+        "@babel/core": "7.6.2",
+        "@babel/preset-env": "7.6.2",
+        "@commitlint/cli": "8.2.0",
+        "@commitlint/config-conventional": "8.2.0",
         "@flowscripter/renovate-config": "1.0.3",
-        "@flowscripter/tsconfig": "1.2.0",
-        "@types/debug": "4.1.5",
-        "@types/jest": "24.0.25",
-        "@typescript-eslint/eslint-plugin": "2.15.0",
-        "@typescript-eslint/parser": "2.15.0",
-        "eslint": "6.8.0",
-        "eslint-plugin-import": "2.19.1",
-        "eslint-plugin-jest": "23.3.0",
-        "gulp": "4.0.2",
-        "husky": "3.1.0",
+        "babel-jest": "24.9.0",
+        "eslint": "6.5.1",
+        "eslint-config-airbnb-base": "14.0.0",
+        "eslint-plugin-import": "2.18.2",
+        "eslint-plugin-jest": "22.17.0",
+        "husky": "3.0.7",
         "jest": "24.9.0",
+        "nixt": "0.5.1",
         "rimraf": "3.0.0",
-        "rollup": "1.28.0",
+        "rollup": "1.22.0",
         "rollup-plugin-cleanup": "3.1.1",
         "rollup-plugin-commonjs": "10.1.0",
         "rollup-plugin-eslint": "7.0.0",
-        "rollup-plugin-node-builtins": "2.1.2",
         "rollup-plugin-node-resolve": "5.2.0",
         "rollup-plugin-peer-deps-external": "2.2.0",
-        "rollup-plugin-typescript2": "0.25.3",
-        "semantic-release": "15.14.0",
-        "sonarqube-scanner": "2.5.0",
-        "temp-dir": "2.0.0",
-        "ts-jest": "24.3.0",
-        "typedoc": "0.15.6",
-        "typedoc-plugin-external-module-name": "2.1.0",
-        "typescript": "3.7.4"
+        "semantic-release": "15.13.24"
     },
-    "peerDependencies": {
-        "debug": "4.1.1"
-    },
-    "dependencies": {}
+    "dependencies": {
+        "@flowscripter/cli-framework": "1.4.1"
+    }
 }
