--- a/.travis.yml
+++ b/.travis.yml
@@ -30,14 +30,10 @@ jobs:
       os: osx
       name: e2e osx
     - stage: release
-      script: npm run build && npm run e2e -- --maxWorkers=4 && touch dist/.nojekyll
+      script: npm run build && npm run e2e -- --maxWorkers=4
       deploy:
         - provider: script
           skip_cleanup: true
           script: npx semantic-release
-        - provider: pages
-          skip-cleanup: true
-          local-dir: "dist"
-          github-token: $GH_TOKEN
 cache:
   npm: true
